Criando serviços, repository, interfaces, implementações e injeção de dependencia. Criando consultas com banco mockado

--- a/Ecommerce.Backend.Modular/Ecommerce.Stock.Infrastructure/Ecommerce.Stock.Infrastructure.csproj
+++ b/Ecommerce.Backend.Modular/Ecommerce.Stock.Infrastructure/Ecommerce.Stock.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Ecommerce.Application\Ecommerce.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
