--- a/Ecommerce.Backend.Modular/Ecommerce.Stock.Application/Ecommerce.Stock.Application.csproj
+++ b/Ecommerce.Backend.Modular/Ecommerce.Stock.Application/Ecommerce.Stock.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ecommerce.Application\Ecommerce.Application.csproj" />
+    <ProjectReference Include="..\Ecommerce.Stock.Consumer\Ecommerce.Stock.Consumer.csproj" />
   </ItemGroup>
 
 </Project>
