--- a/Ecommerce.Backend.Modular/Ecommerce.Infrastructure/Ecommerce.Infrastructure.csproj
+++ b/Ecommerce.Backend.Modular/Ecommerce.Infrastructure/Ecommerce.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Ecommerce.Domain.csproj" />
     <ProjectReference Include="..\Ecommerce.Application\Ecommerce.Application.csproj" />
   </ItemGroup>
 
