--- a/Ecommerce.Backend.Modular/docker-compose.yml
+++ b/Ecommerce.Backend.Modular/docker-compose.yml
@@ -1,16 +1,31 @@
 services:
   postgres:
     image: postgres:16
-    container_name: postgres_pedidos
+    container_name: ecommerce_postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: pedidosdb
+      POSTGRES_USER: ecommerce_user
+      POSTGRES_PASSWORD: ecommerce_pass
+      POSTGRES_DB: ecommerce_db
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./docker/init:/docker-entrypoint-initdb.d
+
+  api:
+    build:
+      context: .
+      dockerfile: Ecommerce.API/Dockerfile
+    container_name: ecommerce_api
+    depends_on:
+      - postgres
+    ports:
+      - "8080:80"
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=ecommerce_db;Username=ecommerce_user;Password=ecommerce_pass"
+    volumes:
+      - ./Ecommerce.API:/app
 
 volumes:
   postgres_data:
