ajustando docker compose, dockerfile pra rodar a api corretamente. Ajustes no EF framework pra mapear corretamente pra tabelas com nome lowercase

--- a/Ecommerce.Backend.Modular/Dockerfile
+++ b/Ecommerce.Backend.Modular/Dockerfile
@@ -1,23 +1,36 @@
-# Etapa 1 - Build
+# ------------ STAGE 1 : build ------------
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Copia a solution e os projetos
-COPY Ecommerce.Backend.Modular.sln ./
-COPY Ecommerce.Backend.Modular/Ecommerce.API.csproj Ecommerce.Backend.Modular/
-RUN dotnet restore Ecommerce.Backend.Modular/Ecommerce.API.csproj
+# Copiamos apenas os arquivos de projeto primeiro (cache das camadas)
+COPY *.sln .
+COPY API/*.csproj ./API/
+COPY Domain/*.csproj ./Domain/
+COPY Ecommerce.Application/*.csproj ./Ecommerce.Application/
+COPY Ecommerce.Infrastructure/*.csproj ./Ecommerce.Infrastructure/
+COPY Ecommerce.Stock.Application/*.csproj ./Ecommerce.Stock.Application/
+COPY Ecommerce.Stock.Consumer/*.csproj ./Ecommerce.Stock.Consumer/
+COPY Ecommerce.Stock.Domain/*.csproj ./Ecommerce.Stock.Domain/
+COPY Ecommerce.Stock.Infrastructure/*.csproj ./Ecommerce.Stock.Infrastructure/
+COPY Ecommerce.Worker/*.csproj ./Ecommerce.Worker/
+# (adicione mais linhas se criar novos projetos)
 
-# Copia todo o restante e compila
+RUN dotnet restore
+
+# Agora o restante do código
 COPY . .
-WORKDIR /src/Ecommerce.Backend.Modular
-RUN dotnet publish Ecommerce.API.csproj -c Release -o /app/publish
 
-# Etapa 2 - Runtime
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+# Publica só a API (e todas as libs dependentes) em Release
+RUN dotnet publish API/Ecommerce.API.csproj \
+    -c Release -o /app/publish -p:UseAppHost=false
+
+# ------------ STAGE 2 : runtime ------------
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 
-# Expõe a porta (ajuste se necessário)
+# Expõe a porta padrão Kestrel
+ENV ASPNETCORE_URLS=http://+:80
 EXPOSE 80
 
-ENTRYPOINT ["dotnet", "Ecommerce.API.dll"]
+ENTRYPOINT ["dotnet","Ecommerce.API.dll"]
